posts/2014-05-12-english.md: price for English lessons.

--- a/posts/2014-05-12-english.md
+++ b/posts/2014-05-12-english.md
@@ -26,4 +26,6 @@ title: Уроки английского по скайпу
 или уже знаете, но хотите что-то улучшить, Александра вам поможет.
 
 Пишите сюда, чтобы узнать больше и записаться: <sasha.zakharova@gmail.com>.
+Стоимость одного урока (1 час 15 минут): 20 евро.
+
 Выучите, наконец, английский нормально!
