--- a/posts/2014/2014-10-03-links.md
+++ b/posts/2014/2014-10-03-links.md
@@ -32,6 +32,6 @@ title: Октябрьские ссылки
 
 Книга [*Defending the
 Undefendable*](https://mises.org/document/3490/Defending-the-Undefendable)
-Уолтера Блока (на английском, PDF или ePub бесплатно) — почему проститутки,
+Уолтера Блока (на английском, PDF или ePub бесплатно): почему проститутки,
 сутенеры, наркодилеры, шантажисты, рекламщики, спекулянты, коррумпированные
 полицейские — герои и делают полезные для общества дела.
