Mention Russian translation of Defending the Undefendable.

--- a/posts/2014/2014-10-03-links.md
+++ b/posts/2014/2014-10-03-links.md
@@ -35,3 +35,6 @@ Undefendable*](https://mises.org/document/3490/Defending-the-Undefendable)
 Уолтера Блока (на английском, PDF или ePub бесплатно): почему проститутки,
 сутенеры, наркодилеры, шантажисты, рекламщики, спекулянты, коррумпированные
 полицейские — герои и делают полезные для общества дела.
+
+(Русский перевод называется
+[*Овцы в волчьих шкурах: в защиту порицаемых*](https://www.google.com/search?q=Овцы+в+волчьих+шкурах%3A+в+защиту+порицаемых)).
