Switch to custom DH paramaters.
According to weakdh.org, using common DH parameters (such as "group 14"
that we used) enables performing precomputations that help break every
connection which uses such group. Although 2048 group is pretty large
for such break to occur at this time ("Even nation-state actors can't do
the precomputations needed to break DH-2048." - cperciva at
https://twitter.com/cperciva/status/600926161430978560), we replace it
with a per-site randomly generated one.

--- a/config/ssl/README
+++ b/config/ssl/README
@@ -1,5 +1,5 @@
-oakley-group-14.pem 
- 2048-bit DH parameters from RFC-3526.
+sellme.biz-dh-params.pem
+ Custom randomly generated 2048-bit DH group.
 
 sellme.biz.crt
  Combined certificates for use with nginx:
