Remove external image from post.

--- a/posts/2014/2014-05-12-english.md
+++ b/posts/2014/2014-05-12-english.md
@@ -3,7 +3,7 @@ title: Уроки английского по скайпу
 ---
 
 У автора пособия для учителей и репетиторов [Language Burger Games](http://www.languageburger.co.uk) 
-<span style="white-space: nowrap">(<a href="https://itunes.apple.com/ru/app/language-burger-games-anglijskij/id524434801?mt=12&uo=4" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.png) no-repeat;width:81px;height:15px;@media only screen{background-image:url(https://linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_macappstore-sm.svg);}"></a>)</span>
+<span style="white-space: nowrap">(<a href="https://itunes.apple.com/ru/app/language-burger-games-anglijskij/id524434801?mt=12&uo=4">Mac App Store</a>)</span>
 и книги [The Art of Cat Photography](http://www.properpicks.com/cat-photo/), а по совместительству моей жены,
 появилась возможность набрать еще несколько учеников на уроки английского языка по Skype.
 
