Fix post formatting again

--- a/posts/2014/2014-10-03-links.md
+++ b/posts/2014/2014-10-03-links.md
@@ -2,9 +2,7 @@
 title: Октябрьские ссылки
 ---
 
-[Илья Бирман](http://ilyabirman.ru/) пишет серию постов про экономику и государство.
-
-Пересказ книги *Man, Economy and State* Ротбарда (на английском ее можно
+[Илья Бирман](http://ilyabirman.ru/) пишет серию постов про экономику и государство: пересказ книги *Man, Economy and State* Ротбарда (на английском ее можно
 [бесплатно скачать здесь](https://mises.org/rothbard/mes.asp). Я правильно
 понимаю, что русского перевода этой книги нет?):
 
