--- a/posts/2014/2014-05-12-english.md
+++ b/posts/2014/2014-05-12-english.md
@@ -2,7 +2,7 @@
 title: Уроки английского по скайпу
 ---
 
-У автора пособия для учителей и репетиторов [Language Burger Games](http://www.languageburger.co.uk) 
+У автора пособия для учителей и репетиторов [Language Burger Games](http://www.languageburger.co.uk)
 <span style="white-space: nowrap">(<a href="https://itunes.apple.com/ru/app/language-burger-games-anglijskij/id524434801?mt=12&uo=4">Mac App Store</a>)</span>
 и книги [The Art of Cat Photography](http://www.properpicks.com/cat-photo/), а по совместительству моей жены,
 появилась возможность набрать еще несколько учеников на уроки английского языка по Skype.
@@ -17,9 +17,9 @@ title: Уроки английского по скайпу
 > Программу я подбираю индивидуально для каждого ученика, потому что все люди разные и каждому
 > интересно и нужно что-то свое. На уроках я использую любую интересную и полезную информацию
 > из интернета, например: трейлеры фильмов, статьи и видео новостей, информацию из Википедии и т.п.
-> Я, так же, беру материалы из учебников изданий Longman, Macmillan и Oxford.
+> Я также беру материалы из учебников изданий Longman, Macmillan и Oxford.
 > Урок проводится на английском языке, но я перевожу на русский, когда это необходимо для ученика.
-> Я строю урок так, что бы ученик мог максимально использовать свои знания непосредственно в общении,
+> Я строю урок так, чтобы ученик мог максимально использовать свои знания непосредственно в общении,
 > мог понимать информацию и выражать свои мысли на английском.
 
 В ученики приглашаются и взрослые, и дети. Если вы только начинаете изучать английский,
