--- a/posts/2017/2017-01-11-done.md
+++ b/posts/2017/2017-01-11-done.md
@@ -1,7 +1,7 @@
 ---
 date: 2017-01-11 15:45:00 +00:00
 markup: markdown
-title: "Все, приехали"
+title: "Всё, приехали"
 ---
 [Я писал в феврале 2012](/2012/02/nu-vot-mi-pochti-i-priexali.html):
 
