Add missing comma

--- a/posts/2017/2017-01-11-done.md
+++ b/posts/2017/2017-01-11-done.md
@@ -35,4 +35,4 @@ title: "Всё, приехали"
 
 Еще остался обходной путь — правым кликом на иконке приложения и выбор "Open"
 для запуска неподписанных программ — но macOS теперь можно официально считать
-платформой, закрытой для сторонних разработчиков не одобренных Эпплом.
+платформой, закрытой для сторонних разработчиков, не одобренных Эпплом.
